WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130819
[iOS][WK2] <
rdar://problem/16265272
> REGRESSION (WebKit2): Some pages appear blank until you scroll
https://bugs.webkit.org/show_bug.cgi?id=130819
Summary
[iOS][WK2] <rdar://problem/16265272> REGRESSION (WebKit2): Some pages appear ...
Benjamin Poulain
Reported
2014-03-26 21:12:05 PDT
[iOS][WK2] <
rdar://problem/16265272
> REGRESSION (WebKit2): Some pages appear blank until you scroll
Attachments
Patch
(5.14 KB, patch)
2014-03-26 21:19 PDT
,
Benjamin Poulain
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2014-03-26 21:19:50 PDT
Created
attachment 227917
[details]
Patch
Tim Horton
Comment 2
2014-03-26 21:21:23 PDT
Comment on
attachment 227917
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=227917&action=review
> Source/WebKit2/WebProcess/WebPage/ios/WebPageIOS.mm:1710 > + scaledMinimumLayoutSize.scale(scale);
"scaled"
Benjamin Poulain
Comment 3
2014-03-26 21:31:44 PDT
Committed
r166343
: <
http://trac.webkit.org/changeset/166343
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug